--- a/.github/workflows/OrangeFox-Compile.yml
+++ b/.github/workflows/OrangeFox-Compile.yml
@@ -20,23 +20,24 @@ on:
       DEVICE_TREE:
         description: 'Custom Recovery Tree'
         required: true
-        default: 'https://github.com/cd-Crypton/custom_recovery_tree_realme_nashc'
+        default: 'https://github.com/vadd99/android_device_xiaomi_plato_TWRP'
       DEVICE_TREE_BRANCH:
         description: 'Custom Recovery Tree Branch'
         required: true
-        default: 'android-12.1'
+        default: 'TWRP-12.1_A14-HyperOS
+default'
       DEVICE_PATH:
         description: 'Specify your device path.'
         required: true
-        default: 'device/realme/nashc'
+        default: 'device/xiaomi/plato'
       DEVICE_NAME:
         description: 'Specify your Device Codename.'
         required: true
-        default: 'nashc'
+        default: 'plato'
       BUILD_TARGET:
         description: 'Specify your Build Target'
         required: true
-        default: 'recovery'
+        default: 'vendorboot'
         type: choice
         options:
         - boot
