--- a/.github/workflows/OrangeFox-Compile.yml
+++ b/.github/workflows/OrangeFox-Compile.yml
@@ -88,6 +88,10 @@ jobs:
         cd ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}
         git clone ${{ github.event.inputs.DEVICE_TREE }} -b ${{ github.event.inputs.DEVICE_TREE_BRANCH }} ./${{ github.event.inputs.DEVICE_PATH }}
         git clone https://github.com/vadd99/gflags ./external/gflags
+        rm -rf ./bootable/recovery
+        rm -rf ./system/vold
+        git clone https://github.com/ChrisCatto/bootable_recovery ./bootable/recovery
+        git clone https://github.com/ChrisCatto/android_system_vold ./system/vold
 
     - name: Check Manifest Branch
       uses: haya14busa/action-cond@v1
